--- a/storyer/templates/student-pick.html
+++ b/storyer/templates/student-pick.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE = edge">
   <meta name="viewport" content="width=device-width initial-scale=1.0">
+
   <title>
     Pick Groups Student
   </title>
   {% load static %}
-  <link rel='stylesheet' href='../../../static/css/styles.css' />
-
-
+  <link rel='stylesheet' href='../../../../static/css/pagestyles.css' />
+  <link rel='stylesheet' href='../../../../static/css/styles.css' />
 </head>
 
 <body class="solid-bg">
@@ -34,7 +34,7 @@
           <td>
             <div class="group-entry">
               {% load static %}
-              <img src="../../../static/media/images/group.png" alt="group" height="200">
+              <img src="../../../../static/media/images/group.png" alt="group" height="200">
               <p>{{ group.name }}</p>
               <div class="descripton">
                 <p>{{ group.description }}</p>
